--- a/EventBooking/Views/Shared/_Layout.cshtml
+++ b/EventBooking/Views/Shared/_Layout.cshtml
@@ -24,24 +24,24 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Events</a>
+                            <a class="nav-link" asp-area="" asp-controller="Events" asp-action="Index">Events</a>
                         </li>
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Index">Categories</a>
+                                <a class="nav-link" asp-area="" asp-controller="EventCategory" asp-action="Index">Categories</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Venue" asp-action="Index">Venues</a>
+                                <a class="nav-link" asp-area="" asp-controller="Venue" asp-action="Index">Venues</a>
                             </li>
                         }
                         @if (User.IsInRole("Member"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="Index">My Bookings</a>
+                                <a class="nav-link" asp-area="" asp-controller="Booking" asp-action="Index">My Bookings</a>
                             </li>
                         }
                     </ul>
@@ -50,7 +50,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container animate-slide-up">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
